Revert "fix(content): hide overflow on nuxt root container"
This reverts commit 3f6d3a377e1cc0c4e8e31782fc7e27e88398b173.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,8 +45,3 @@
 @import 'buttons.css';
 @import 'utilities.css';
 @import 'prose.css';
-
-/* Nuxt Wrapper */
-#__nuxt {
-  overflow: hidden;
-}
